[package]
name = "zstd-wasm-vn"
description = "WASM zstd"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/ndtao2020/zstd-wasm-vn"
authors = ["Nguyen Dinh Tao <ndtao2020@gmail.com>"]
license = "MIT License"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
alloc_cat = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", default-features = false, features = ["js"] }
zstd = { version = "0.13", default-features = false, features = ["wasm"] }
